[package]
name = "hwallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
bitcoin = { version = "0.30", features = ["serde"]}
anyhow = "1"
reqwest = {version="0.11.16", features=["json", "rustls-tls", "blocking"], default-features = false}
serde = { version = "1", features=["derive"]}
bip39 = {version = "2.0.0", features=["rand"]}
miniscript = "10.0.0"